# syns

./: README.md
question_1/: README.md  answer_1.md  answer_1.txt
question_2/: CMakeLists.txt  README.md
question_2/src/: circular_buffer.cpp  circular_buffer.h
question_2/tests/: circular_buffer_tests.cpp
question_3_4/: README.md
question_3_4/src/: linked_list.cpp  linked_list.h  sort_list.h
question_3_4/tests/: car_tests.cpp  linked_list_tests.cpp  sort_tests.cpp
question_3_4_5/: CMakeLists.txt  README.md
question_3_4_5/src/: car.h  linked_list.cpp  linked_list.h  merge_sort.h  sort_list.h
question_3_4_5/tests/: car_tests.cpp  linked_list_tests.cpp  sort_tests.cpp
question_5/: README.md
